[project]
name = "test-deploy"
version = "0.1.0"
description = ""
authors = [
    {name = "Massimiliano Pippi",email = "mpippi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
